--- a/data/flume/source/flume_hbase.conf
+++ b/data/flume/source/flume_hbase.conf
@@ -4,7 +4,7 @@ tier2.sinks = snk-2
 
 tier2.channels.ch-2.type = memory
 tier2.channels.ch-2.capacity = 1000
-tier2.channels.ch-2.transactionCapacity = 100s
+tier2.channels.ch-2.transactionCapacity = 100
 
 tier2.sources.src-2.type = spooldir
 tier2.sources.src-2.spoolDir = /data/flume/source/hbase
